--- a/manifests/0000_30_config-operator_07_deployment.yaml
+++ b/manifests/0000_30_config-operator_07_deployment.yaml
@@ -21,17 +21,42 @@ spec:
         app: openshift-config-operator
     spec:
       serviceAccountName: openshift-config-operator
+      volumes:
+      - name: serving-cert
+        secret:
+          secretName: config-operator-serving-cert
+          optional: true
       containers:
       - name: openshift-config-operator
         terminationMessagePolicy: FallbackToLogsOnError
         image: quay.io/openshift/origin-cluster-config-operator:v4.0
         imagePullPolicy: IfNotPresent
         command: ["cluster-config-operator", "operator"]
+        ports:
+          - containerPort: 8443
+            name: metrics
+            protocol: TCP
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            scheme: HTTPS
+            port: 8443
+          initialDelaySeconds: 3
+          periodSeconds: 3
+        readinessProbe:
+          httpGet:
+            path: /healthz # TODO: replace this with /readyz
+            scheme: HTTPS
+            port: 8443
+          initialDelaySeconds: 3
+          periodSeconds: 3
         resources:
           requests:
             memory: 50Mi
             cpu: 10m
         volumeMounts:
+        - mountPath: /var/run/secrets/serving-cert
+          name: serving-cert
         env:
         - name: IMAGE
           value: quay.io/openshift/origin-cluster-config-operator:v4.0
