Eliminate the SCC priority dependency using specific securityContext
If "nonroot" SCC priority is changed as higher than anyuid SCC, the operator pod is failed and it make OTA upgrade fail either.
For suppressing this issue, specify "securityContext.runAsUser: 0" in order to select required "anyuid" SCC regardless of SCC "Priority".

--- a/manifests/0000_30_config-operator_07_deployment.yaml
+++ b/manifests/0000_30_config-operator_07_deployment.yaml
@@ -31,6 +31,8 @@ spec:
         terminationMessagePolicy: FallbackToLogsOnError
         image: quay.io/openshift/origin-cluster-config-operator:v4.0
         imagePullPolicy: IfNotPresent
+        securityContext:
+          runAsUser: 0
         command: ["cluster-config-operator", "operator"]
         ports:
           - containerPort: 8443
