--- a/empty-resources/0000_05_config-operator_02_build.cr.yaml
+++ b/empty-resources/0000_05_config-operator_02_build.cr.yaml
@@ -3,5 +3,6 @@ kind: Build
 metadata:
   name: cluster
   annotations:
+    include.release.openshift.io/self-managed-high-availability: "true"
     release.openshift.io/create-only: "true"
 spec: {}
