--- a/manifests/0000_30_config-operator_01_prometheusrole.yaml
+++ b/manifests/0000_30_config-operator_01_prometheusrole.yaml
@@ -5,6 +5,7 @@ metadata:
   name: prometheus-k8s
   namespace: openshift-config-operator
   annotations:
+    include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
     include.release.openshift.io/single-node-developer: "true"
 rules:
