--- a/empty-resources/0000_05_config-operator_02_dns.cr.yaml
+++ b/empty-resources/0000_05_config-operator_02_dns.cr.yaml
@@ -4,5 +4,6 @@ metadata:
   name: cluster
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
+    include.release.openshift.io/single-node-developer: "true"
     release.openshift.io/create-only: "true"
 spec: {}
