--- a/manifests/0000_10_config-operator_02_config.clusterrole.yaml
+++ b/manifests/0000_10_config-operator_02_config.clusterrole.yaml
@@ -3,6 +3,7 @@ kind: ClusterRole
 metadata:
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
+    include.release.openshift.io/single-node-developer: "true"
   labels:
     rbac.authorization.k8s.io/aggregate-to-cluster-reader: "true"
   name: system:openshift:cluster-config-operator:cluster-reader
