--- a/manifests/0000_30_config-operator_01_prometheusrole.yaml
+++ b/manifests/0000_30_config-operator_01_prometheusrole.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: openshift-config-operator
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
+    include.release.openshift.io/single-node-developer: "true"
 rules:
 - apiGroups:
   - ""
