--- a/manifests/0000_30_config-operator_02_prometheusrolebinding.yaml
+++ b/manifests/0000_30_config-operator_02_prometheusrolebinding.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: openshift-config-operator
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
+    include.release.openshift.io/single-node-developer: "true"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
