--- a/manifests/0000_30_config-operator_04_roles.yaml
+++ b/manifests/0000_30_config-operator_04_roles.yaml
@@ -4,6 +4,7 @@ metadata:
   name: system:openshift:operator:openshift-config-operator
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
+    include.release.openshift.io/single-node-developer: "true"
 roleRef:
   kind: ClusterRole
   name: cluster-admin
