--- a/empty-resources/0000_05_config-operator_02_project.cr.yaml
+++ b/empty-resources/0000_05_config-operator_02_project.cr.yaml
@@ -5,4 +5,5 @@ metadata:
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
     release.openshift.io/create-only: "true"
+    include.release.openshift.io/single-node-production-edge: "true"
 spec: {}
