--- a/manifests/0000_30_config-operator_01_operator.cr.yaml
+++ b/manifests/0000_30_config-operator_01_operator.cr.yaml
@@ -5,5 +5,6 @@ metadata:
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
     release.openshift.io/create-only: "true"
+    include.release.openshift.io/single-node-production-edge: "true"
 spec:
   managementState: Managed
