--- a/manifests/0000_30_config-operator_02_service.yaml
+++ b/manifests/0000_30_config-operator_02_service.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
     service.alpha.openshift.io/serving-cert-secret-name: config-operator-serving-cert
+    include.release.openshift.io/single-node-production-edge: "true"
   labels:
     app: openshift-config-operator
   name: metrics
