--- a/manifests/0000_30_config-operator_05_serviceaccount.yaml
+++ b/manifests/0000_30_config-operator_05_serviceaccount.yaml
@@ -5,5 +5,6 @@ metadata:
   name: openshift-config-operator
   annotations:
     include.release.openshift.io/self-managed-high-availability: "true"
+    include.release.openshift.io/single-node-production-edge: "true"
   labels:
     app: openshift-config-operator
